@@ -81,14 +81,14 @@ cobcrun_print_version (void)
 	day = 0;
 	year = 0;
 	status = sscanf (__DATE__, "%s %d %d", month, &day, &year);
-	if (status == 3) {
-		snprintf (cob_build_stamp, (size_t)COB_MINI_MAX,
-			  "%s %2.2d %4.4d %s", month, day, year, __TIME__);
-	} else {
-		/* LCOV_EXCL_START */
+	/* LCOV_EXCL_START */
+	if (status != 3) {
 		snprintf (cob_build_stamp, (size_t)COB_MINI_MAX,
 			"%s %s", __DATE__, __TIME__);
-		/* LCOV_EXCL_STOP */
+	/* LCOV_EXCL_STOP */
+	} else {
+		snprintf (cob_build_stamp, (size_t)COB_MINI_MAX,
+			  "%s %2.2d %4.4d %s", month, day, year, __TIME__);
 	}
 
 	printf ("cobcrun (%s) %s.%d\n",
@@ -155,10 +155,14 @@ cobcrun_split_path_file (char** pathname, char** filename, char *pf)
 	char sav;
 
 	/* set pos to last slash (if any) */
-	while ((next_pos = strpbrk (pos + 1, "\\/")) != NULL) pos = next_pos;
+	while ((next_pos = strpbrk (pos + 1, "\\/")) != NULL) {
+		pos = next_pos;
+	}
 
 	/* set pos to first character after last slash (if any) */
-	if (pf !=pos) pos++;
+	if (pf != pos) {
+		pos++;
+	}
 
 	/* copy string up to  last slash as pathname (possible emtpy) */
 	sav = *pos;
@@ -174,20 +178,26 @@ cobcrun_split_path_file (char** pathname, char** filename, char *pf)
  * Prepend a new directory path to the library search COB_LIBRARY_PATH
  * and setup a module COB_PRE_LOAD, for each component included.
  */
-static int
+static const char *
 cobcrun_initial_module (char *module_argument)
 {
 	char	*pathname, *filename;
 	char	env_space[COB_MEDIUM_BUFF], *envptr;
 	/* FIXME: split in two functions (one setting module, one setting path)
 	          after allowing module with path in COB_PRE_LOAD */
+
+	/* LCOV_EXCL_START */
 	if (!module_argument) {
-		return 1;
+		/* never reached (getopt ensures that we have an argument),
+		   just in to keep the analyzer happy */
+		return "missing argument";
 	}
+	/* LCOV_EXCL_STOP */
 
 	/* See if we have a /dir/path/module, or a /dir/path/ or a module (no slash) */
 	cobcrun_split_path_file (&pathname, &filename, module_argument);
 	if (*pathname) {
+		/* TODO: check content, see libcob/common.h */
 		memset (env_space, 0, COB_MEDIUM_BUFF);
 		envptr = getenv ("COB_LIBRARY_PATH");
 		if (envptr) {
@@ -202,6 +212,7 @@ cobcrun_initial_module (char *module_argument)
 	cob_free((void *)pathname);
 
 	if (*filename) {
+		/* TODO: check content, see libcob/common.h */
 		memset(env_space, 0, COB_MEDIUM_BUFF);
 		envptr = getenv ("COB_PRE_LOAD");
 		if (envptr) {
@@ -214,7 +225,7 @@ cobcrun_initial_module (char *module_argument)
 		(void) cob_setenv ("COB_PRE_LOAD", env_space, 1);
 	}
 	cob_free ((void *)filename);
-	return 0;
+	return NULL;
 }
 
 /**
@@ -224,6 +235,7 @@ static void
 process_command_line (int argc, char *argv[])
 {
 	int			c, idx;
+	const char		*err_msg;
 #ifdef _WIN32
 	int			argnum;
 
@@ -246,15 +258,15 @@ process_command_line (int argc, char *argv[])
 
 		case 'c':
 		case 'C':
-			/* --config=<file> */
+			/* -c <file>, --config=<file> */
+			/* LCOV_EXCL_START */
 			if (strlen (cob_optarg) > COB_SMALL_MAX) {
-				/* LCOV_EXCL_START */
 				fputs (_("invalid configuration file name"), stderr);
 				putc ('\n', stderr);
 				fflush (stderr);
 				exit (1);
-				/* LCOV_EXCL_STOP */
 			}
+			/* LCOV_EXCL_STOP */
 			arg_shift++;
 			(void) cob_setenv ("COB_RUNTIME_CONFIG", cob_optarg, 1);
 			/* shift argument again if two part argument was used */
@@ -294,11 +306,13 @@ process_command_line (int argc, char *argv[])
 			exit (0);
 		case 'M':
 		case 'm':
-			/* --module=<module> */
+			/* -M <module>, --module=<module> */
 			arg_shift++;
-			if (cobcrun_initial_module (cob_optarg)) {
-				fputs (_("invalid module argument"), stderr);
+			err_msg = cobcrun_initial_module (cob_optarg);
+			if (err_msg != NULL) {
+				fprintf (stderr, _("invalid module argument '%s'"), cob_optarg);
 				putc ('\n', stderr);
+				fputs (err_msg, stderr);
 				fflush (stderr);
 				exit (1);
 			}
@@ -307,6 +321,17 @@ process_command_line (int argc, char *argv[])
 				arg_shift++;
 			}
 			break;
+
+		/* LCOV_EXCL_START */
+		default:
+			/* not translated as unlikely: */
+			fprintf (stderr, "missing evaluation of command line option '%c'", c);
+			putc ('\n', stderr);
+			fputs (_("Please report this!"), stderr);
+			fflush (stderr);
+			exit (1);
+		/* LCOV_EXCL_STOP */
+
 		}
 	}
 }
@@ -347,7 +372,7 @@ main (int argc, char **argv)
 	cob_init (argc - arg_shift, &argv[arg_shift]);
 	if (print_runtime_wanted) {
 		print_runtime_conf ();
-		putc ('\n', stderr);
+		putc ('\n', stdout);
 	}
 	unifunc.funcvoid = cob_resolve (argv[arg_shift]);
 	if (unifunc.funcvoid == NULL) {
