@@ -1,5 +1,5 @@
 /*
-   Copyright (C) 2010-2012 Free Software Foundation, Inc.
+   Copyright (C) 2010-2012, 2016 Free Software Foundation, Inc.
    Written by Roger While
 
    This file is part of GnuCOBOL.
