@@ -510,11 +510,11 @@ setenv COB_PHYSICAL_CANCEL=true
 ])
 
 
-# check if default for physical cancel is still false
+# verify that default for physical cancel is still false
 AT_CHECK([$COBCRUN --runtime-conf | \
 grep "COB_PHYSICAL_CANCEL" | grep "false" | grep "default"], [0], ignore, [])
 
-# check if override via -c works and if include works
+# verify that override via -c works and if include works
 AT_CHECK([$COBCRUN -c test2.cfg --runtime-conf | \
 grep "physical_cancel" | grep "true"], [0], ignore, [])
 AT_CHECK([$COBCRUN -c test.cfg --runtime-conf | \
@@ -522,7 +522,15 @@ grep "physical_cancel" | grep "true"], [0], ignore, [])
 AT_CHECK([$COBCRUN -c test3.cfg --runtime-conf | \
 grep "COB_PHYSICAL_CANCEL" | grep "true"], [0], ignore, [])
 
-# check if configuration file loading with full path works
+# verify that that long option works
+AT_CHECK([$COBCRUN --config=test3.cfg --runtime-conf | \
+grep "COB_PHYSICAL_CANCEL" | grep "true"], [0], ignore, [])
+
+# verify that that environment setting works
+AT_CHECK([COB_RUNTIME_CONFIG=test3.cfg $COBCRUN --runtime-conf | \
+grep "COB_PHYSICAL_CANCEL" | grep "true"], [0], ignore, [])
+
+# verify that configuration file loading with full path works
 AT_CHECK([$COBCRUN -c "$(_return_path "$(pwd)/test.cfg")" --runtime-conf],
 [0], ignore, [])
 
