@@ -1,4 +1,9 @@
 
+2017-11-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* cobc.c: check missing evaluation of command line option;
+	  code-coverage specific changes
+
 2017-10-25  Ron Norman <rjn@inglenet.com>
 
 	* typeck.c (validate_move invalid:) fixed bug #225 report
